# moonlight-tizen

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.Samsung.md  README.md  appveyor.yml  auddec.cpp  common-c.mk  connectionlistener.cpp  gamepad.cpp  http.cpp  index.html  input.cpp  main.cpp  moonlight.hpp  profiling.cpp  submodulesVer.txt  viddec.cpp
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: bot-stale.yml  build-and-prerelease.yml  build-and-release.yml  docker-publish.yml  release-development.yml  release-stable.yml  release-usb.yml
libgamestream/: mkcert.c
moonlight-common-c/: .gitmodules
moonlight-common-c/enet/: protocol.c  unix.c  win32.c
moonlight-common-c/enet/include/enet/: enet.h
moonlight-common-c/src/: Platform.h  PlatformSockets.c  RtpVideoQueue.c
res/: config.xml  platform.js
static/css/: material.min.css  style.css
static/js/: index.js  messages.js
wasm/: CPPLINT.cfg  auddec.cpp  connectionlistener.cpp  gamepad.cpp  http.cpp  index.html  input.cpp  libchelper.c  main.cpp  moonlight_wasm.hpp  profiling.cpp  wasmplayer.cpp
wasm/dispatcher/: lib.hpp
wasm/platform/: common.js  gamepad.js  index.js  messages.js  navigation.js  remote_controller.js
wasm/static/css/: material-icons.css  material.min.css  style.css
wasm/static/js/: common.js  index.js  messages.js  utils.js
wasm/static/js/mdns-browser/: dns.js  main.js
